--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,40 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Dependencies / package managers
+node_modules/
+.pnpm-store/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-lock.yaml.*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Next.js / Turbopack / Vercel
+.next/
+.next.static/
+.turbo/
+.vercel/
 
-# vercel
-.vercel
+# Build outputs
+dist/
+build/
+out/
+coverage/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Env / local
+.env
+.env.*
+!.env.example
 
-/app/generated/prisma
+# OS/editor
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+
+# Prisma
+prisma/*.db
+prisma/*.db-journal
+
+# Media to keep out of git (use Git LFS instead)
+public/**/*.mp4
+public/**/*.mov
+public/**/*.zip
+public/**/*.iso
