--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:pull": "prisma db pull",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^6.15.0",
+    "@prisma/client": "6.15.0",
     "next": "15.5.2",
-    "prisma": "^6.15.0",
+    "prisma": "6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sitemap": "^8.0.0"
