--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@microsoft/clarity": "^1.0.0",
     "@prisma/client": "6.15.0",
+    "@vercel/analytics": "^1.5.0",
     "next": "15.5.2",
     "prisma": "6.15.0",
     "react": "19.1.0",
